apps/infra/minio/resources/ingressroute.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:98du23HWdgxPxQnenseJvSkXAu/yeyj6ZDwj5Sg=,iv:nZVWiPkAuMaLQjsMjbIQpr3/Gu7hSX6z2RZXqPtpDS0=,tag:piBxOEMn9wodwYNOYFSWQA==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:yzf1T1JFdIF5l2SDA6H9K253bLqiQ8+6s5ZDi68=,iv:DAyhVIOVxFjScEcVhlD2NjCoIIkXmUd/5WYp7JuygIk=,tag:BVaOpEpuSIa/fMDVSnHYMw==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:ZCMl2KTrXpcI7NFiIl5dGzpEHRaLnxgWGDs=,iv:jenT8IbE18yhfRvny7ZeZ2aY4tjaszR0hSEh0NAcA30=,tag:N377bzGX/ZdCqJP1riOC8w==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: s3-production
    namespace: minio
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:TrG7+9WXslx8JGL8TgmnAu4PTl16TW/tEFfUr3MeCgyT+C3kyA==,iv:ASyoBiAfUg/sHutGa37+rcn/EIqm3/eimjE6UKMDsbk=,tag:fsuauiEu1TiqXj38/7Q40g==,type:str]
          services:
            - kind: TraefikService
              name: s3
              namespace: minio
    tls:
        domains:
            - main: ENC[AES256_GCM,data:bH2AuSz1BW7h9N5gKO8c92GLXMypsIJsoU8=,iv:IYEMI5pWfYhVRiG24aZsWO90XFRwam/HpJpSDAos0gk=,tag:2KGmoizN4D9iJ4CA8XflTA==,type:str]
              sans:
                - ENC[AES256_GCM,data:M9JGg53PG1c/Zhwhmtfwts1gfS8LxM6oFqZp,iv:BTtahGs4d+k10m5OKBKYmkiwHx3SGxc/PgkT4mbgp7Y=,tag:9SiaM5KCiONyrjZ8cc6qAw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: s3-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFL0VNR09FMWF2d0crSHJN
[...]
            wth/4McGj25uBcJ7KxSuuTSLsamMjie5bb3Of9zUix9X23phh59hnQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-11T22:20:34Z"
    mac: ENC[AES256_GCM,data:0lcnBhScnkbfyaOrYY4amFOO7XhzZ9dO0Zv5VPCHroHgccEhIf2iGZ46GVl34JjPrPa+1CWd/rk7NfmLoqXF83R69+2weWBT/y5oYANI5PLufcOR8xkEJ8+ImFiO5lGe5vaX6sz1Xz0YjiKSD3EP1HgJYdvaBJ6//cCS4OIccy8=,iv:9udJjRWC+lgRYlrkpJiIX1kCaE1cHSx0a5xxXrf9XAA=,tag:eYEtlYHgMpSpA4OJxZmhxg==,type:str]
    pgp:
        - created_at: "2024-10-11T22:20:34Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//YkuV8owyrGjo9nCNv4ieb1E+OVOYNb8aRdw0ivSw6PiC
[...]
            =13Vs
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        cert-manager.io/common-name: ENC[AES256_GCM,data:qdMdsv+ESwy4qNGDPXbU07bYCJl8Oz7xYznLKQykPtY=,iv:Pne21xE8EOercOiMEGqr7s9AYB9RvBkkjNt5bSJzHlQ=,tag:pWAW6RlY8B1fAorcZMx3rg==,type:str]
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:Ue6vWaIkviAH/boFd1uRTqgjNxCgYWGJqlMpijAvDE0=,iv:UG35tPTzhfaL5BZnxNfDdXm1gNHGIN3AtMBLclrHpkM=,tag:wfJNvpJwOfFxnUKDYoV9dQ==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:76P7BR0eMbQEO9S53b6LaU1+qBNtGKsT3+o=,iv:a2s3eKyXxmdltKxfG4UROvFWDF3woxXLohiZgekhBHE=,tag:GkBov4D9anIZFNcjGrfgZw==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: minio-production
    namespace: minio
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:y90E2XTmyIH6IhhEf7Gw6M9w5LxZDQcUi2iktdgUO4ecnDIjlpUGNDM69Pq15lEnXSpGSg18Lv1Z4J6f/g==,iv:ibavhVQud+JTw1DksKIIh6JMAdsYtdKwwnorfwWnE98=,tag:JIMQtYlg65VsI7zVAAxw2g==,type:str]
          middlewares:
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: minio-console
              namespace: minio
    tls:
        domains:
            - main: ENC[AES256_GCM,data:bbPMFuFqAkvyk5X7qV57VHvBCwwHIok/mQE=,iv:1gUSWPIGypX1ikb+qscQmy2IEe++4lRr45ihRPO+j6I=,tag:ijIe2RcHSmh4M0Dt4vgvrw==,type:str]
              sans:
                - ENC[AES256_GCM,data:g0DUAP7Ls1pLTb+SA3+UFDnKKglr///7ucCx,iv:EQ4j3cIBuHmFyjvj2lGj34bexOv6uB/M0KY+5be59OQ=,tag:9kuTAthwb53NbxJLt7n89Q==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: minio-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBFL0VNR09FMWF2d0crSHJN
[...]
            wth/4McGj25uBcJ7KxSuuTSLsamMjie5bb3Of9zUix9X23phh59hnQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-11T22:20:34Z"
    mac: ENC[AES256_GCM,data:0lcnBhScnkbfyaOrYY4amFOO7XhzZ9dO0Zv5VPCHroHgccEhIf2iGZ46GVl34JjPrPa+1CWd/rk7NfmLoqXF83R69+2weWBT/y5oYANI5PLufcOR8xkEJ8+ImFiO5lGe5vaX6sz1Xz0YjiKSD3EP1HgJYdvaBJ6//cCS4OIccy8=,iv:9udJjRWC+lgRYlrkpJiIX1kCaE1cHSx0a5xxXrf9XAA=,tag:eYEtlYHgMpSpA4OJxZmhxg==,type:str]
    pgp:
        - created_at: "2024-10-11T22:20:34Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//YkuV8owyrGjo9nCNv4ieb1E+OVOYNb8aRdw0ivSw6PiC
[...]
            =13Vs
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|cert-manager.io/common-name|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
