apps/infra/minio/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: s3.storage.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:KUfhww/2RgNdCb8XHKsYEn1GIlyp7Br+A1dVPKA=,iv:o6fZvBmlt4rZkODOKtFJkOTB7UmGSkCg6pGlFr2FmPs=,tag:hQnJS/NpP1dJft5mUGx87g==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:WeWM62Wjz5Gt2jY+tzLwKvu0BiSEtMVyMzE=,iv:9/jCMl1wSaeKQShSIqhuJDTvdALOr15khDfB5d1e8OY=,tag:pyPIyF7B6PhLBvGY942GGQ==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: s3-staging
    namespace: minio
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:edOQJ1C34gd+CYDm61ndlkW5h8J1OclVrv3EAM5L06uhGfGB+A==,iv:Pk96SkAm5oraJuT5jSIE6iiw94a/iFEEy1zuOeiAmwA=,tag:70MGb+Big4cFgACHA8c0Bw==,type:str]
          services:
            - kind: TraefikService
              name: s3
              namespace: minio
    tls:
        domains:
            - main: ENC[AES256_GCM,data:StxxFcTOSFlcD2ZGM6c1RG+BH31GE6wUBIE=,iv:WU3yoGs8nV7k5i/8WQONiLPW973pvKSU3mRZPFG/H6g=,tag:+WmsHLkROY+/lnPgjEaNAA==,type:str]
              sans:
                - ENC[AES256_GCM,data:bNiDsmg3ON+BZqpo+MxtRnKPXSFWSopdLsR+,iv:GxH9IaxW+JWGygj6QkOPSwtIjdf/XJ+WyzEenH4F7Mg=,tag:frDE4KgTK8tWdyJ1AccGtw==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: s3-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByUXdBcTd4RHJvQlVaQ2hp
[...]
            wrmEG36PZGlG/Omu/efTtHrPZza1fW8QhXUQ7ORWVQqdJrj1mEoseQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-07T13:33:57Z"
    mac: ENC[AES256_GCM,data:j7kritJI4Ct9HdKSVdnJTkx20049XsQJME4c/a7nSXQzzfWcfC0jP58Bl5DZHILnZEtRgHELmn//mLNQvhi/fPY0a9MjBjrCvq8nqhE3uWnWdFFzciV2gj2D65e2RaZyJXZPvXTHB9nxHqwWGVes+wOOaPel5uBXH728SSgHlyE=,iv:yqRY050ZctBe3WYnQvU5aLY6FcofNXAO5o8HC08IoZ0=,tag:fppCA1Af9JSJKyfol2wlJg==,type:str]
    pgp:
        - created_at: "2024-10-07T13:33:57Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//XImJA9Z4x2k0LifBvO//5SoJ9NrKM5fezZQjiwHpPs3B
[...]
            =3FTL
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        cert-manager.io/common-name: minio.storage.anotherlife.org.pl
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:DNi5VVRKPmQYXqiJ81K5uPARKUJXHXAGjOazUSeWfSQ=,iv:nS0zybALvrqnZZ2qHhr5JFWd7OCjcGbTj2rPcKsy3HU=,tag:EXOgTh2hmUxDUuhdf3QoCg==,type:str]
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:B+itWpkA1Uocxg3MAKks9Byj1OhZyqaHSx0=,iv:uO4VpapG0cUHefgkVPI4S0udv5MHBu0OlBK7qPAHiFE=,tag:rXbrt+IebIxiOEckLzkGvA==,type:str]
        ingress.kubernetes.io/ssl-passthrough: "true"
        external-dns.alpha.kubernetes.io/ttl: "300"
        kubernetes.io/ingress.class: traefik-external
    name: minio-staging
    namespace: minio
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:YKOf3Ou/FQNLfCUXaO9GyniGkHh8y9Y9/4/TYerlhHbG7t9aiJ9crTBAHiQWxjh5nOghsag0LJgJ4MD58g==,iv:SZmPMCOSxUyyw/sqYp0oPYDWeAoHPpLKBpAhC1HA0BM=,tag:StZoiFdNf8klETaxqP8Crg==,type:str]
          middlewares:
            - name: rate-limit
              namespace: traefik
          services:
            - kind: TraefikService
              name: minio-console
              namespace: minio
    tls:
        domains:
            - main: ENC[AES256_GCM,data:6YcIFoL/DgJjLm+NxcbpUhI/FTa/z2zOJXE=,iv:hC/VmqatsadjilTx4npJfJzy8eXy2CwL79+8EDLGydI=,tag:X37mkb/gwGpj20OdaV7dBw==,type:str]
              sans:
                - ENC[AES256_GCM,data:jDLRWEkGNePWFolQ7+9Mj3x1gbUJDnMcRlFl,iv:RSx8HFrOtQ8SMRPim4NsepB727bcwQC65DJKdPR4DoM=,tag:38E63qq0WbJV+legxvL4og==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: minio-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByUXdBcTd4RHJvQlVaQ2hp
[...]
            wrmEG36PZGlG/Omu/efTtHrPZza1fW8QhXUQ7ORWVQqdJrj1mEoseQ==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-10-07T13:33:57Z"
    mac: ENC[AES256_GCM,data:j7kritJI4Ct9HdKSVdnJTkx20049XsQJME4c/a7nSXQzzfWcfC0jP58Bl5DZHILnZEtRgHELmn//mLNQvhi/fPY0a9MjBjrCvq8nqhE3uWnWdFFzciV2gj2D65e2RaZyJXZPvXTHB9nxHqwWGVes+wOOaPel5uBXH728SSgHlyE=,iv:yqRY050ZctBe3WYnQvU5aLY6FcofNXAO5o8HC08IoZ0=,tag:fppCA1Af9JSJKyfol2wlJg==,type:str]
    pgp:
        - created_at: "2024-10-07T13:33:57Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//XImJA9Z4x2k0LifBvO//5SoJ9NrKM5fezZQjiwHpPs3B
[...]
            =3FTL
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.9.0
